fdo#36681: refresh the layout after inserting a picture